--- a/_posts/2022-01-17-welcome.markdown
+++ b/_posts/2022-01-17-welcome.markdown
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title:  "Welcome!"
 date:   2022-01-17 16:40:47 +0100
-categories: jekyll update
+categories: unimportant
 ---
-You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
+<!--- You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
 Jekyll requires blog post files to be named according to the following format:
 
@@ -27,3 +27,7 @@ Check out the [Jekyll docs][jekyll-docs] for more info on how to get the most ou
 [jekyll-docs]: https://jekyllrb.com/docs/home
 [jekyll-gh]:   https://github.com/jekyll/jekyll
 [jekyll-talk]: https://talk.jekyllrb.com/
+---> 
+
+Welcome to my website! You can find up to date information on my [teaching activites][https://zinked.github.io/teaching], my [CV][https://zinked.github.io/cv/],
+and my [research projects][https://zinked.github.io/research/].
